--- a/_extensions/metropolis-beamer/custom.scss
+++ b/_extensions/metropolis-beamer/custom.scss
@@ -4,14 +4,14 @@
 
 /*-- scss:defaults --*/
 
-$font-family-sans-serif:	"Fira Sans", Helvetica, sans-serif !default;
+$font-family-sans-serif: "Fira Sans", Helvetica, sans-serif !default;
+$presentation-h-font12:	"Fira Sans", sans-serif !default; 
+$presentation-h-font36: "Fira Sans", sans-serif !default; 
 $font-family-monospace:	"Source Code Pro", monospace !default;
-$presentation-h-font12:	"Yanone Kaffeesatz", sans-serif !default; 
-$presentation-h-font36: "Source Sans 3", sans-serif !default; 
-$presentation-font-size-root:	32px !default;
-$presentation-h1-font-size:	2.5em !default;
-$presentation-h2-font-size:	2em !default;
-$presentation-h3-font-size:	1.4em !default;
+$presentation-font-size-root: 32px !default;
+$presentation-h1-font-size:	1.8em !default;
+$presentation-h2-font-size:	1.6em !default;
+$presentation-h3-font-size:	1.2em !default;
 $presentation-font-smaller:	0.7 !default;
 $presentation-line-height: 1.3 !default;
 $presentation-title-slide-text-align: left !default;
