--- a/_extensions/metropolis-beamer/custom.scss
+++ b/_extensions/metropolis-beamer/custom.scss
@@ -1,4 +1,8 @@
-@import url('https://fonts.googleapis.com/css2?family=Fira+Sans:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&family=Open+Sans:ital,wght@0,300..800;1,300..800&family=Source+Sans+3:ital,wght@0,200..900;1,200..900&family=Yanone+Kaffeesatz:wght@200..700&display=swap');
+/*-- Import fonts and files --*/
+
+@import url('https://fonts.googleapis.com/css2?family=Fira+Sans:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap');
+
+@import url('https://fonts.googleapis.com/css2?family=Fira+Code:wght@300..700&family=Fira+Sans:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap');
 
 @import "icon.scss";
 
@@ -7,8 +11,8 @@
 $font-family-sans-serif: "Fira Sans", Helvetica, sans-serif !default;
 $presentation-h-font12:	"Fira Sans", sans-serif !default; 
 $presentation-h-font36: "Fira Sans", sans-serif !default; 
-$font-family-monospace:	"Source Code Pro", monospace !default;
-$presentation-font-size-root: 32px !default;
+$font-family-monospace:	"Fira Code", monospace !default;
+$presentation-font-size-root: 30px !default;
 $presentation-h1-font-size:	1.8em !default;
 $presentation-h2-font-size:	1.6em !default;
 $presentation-h3-font-size:	1.2em !default;
@@ -100,7 +104,7 @@ $authors-block-gap: 4em !default;
       border-radius: 8px;
       
       code {
-        font-size: 1.2em;
+        font-size: 1em;
       }
       
       .callout-title {
@@ -187,7 +191,7 @@ $authors-block-gap: 4em !default;
     background: $header-bg-color;
     z-index: 5;
     
-    .hedaer-title h2 {
+    .header-title h2 {
       color: #fff !important;
     }
   }
@@ -325,10 +329,4 @@ div[type="alert"] {
   div.callout-note.callout-style-default .callout-title {
      color: $alert-color;
   }
-}
-
-.reveal .footnotes {
-  position: absolute;
-  bottom: 0;
-  left: 0;
 }
